--- a/wp-content/themes/firsttheme/src/assets/scss/editor.scss
+++ b/wp-content/themes/firsttheme/src/assets/scss/editor.scss
@@ -1,3 +1,21 @@
-body.gutenberg-editor-page {
-    // background-color: blue;
+@import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap');
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+.editor-post-title__block .editor-post-title__input {
+    font-family: 'Lato', sans-serif;
+}
+
+.wp-block {
+    max-width: 900px;
+}
+
+.wp-block[data-align="wide"] {
+    max-width: 1200px;
+}
+
+.wp-block[data-align="full"] {
+    max-width: none;
 }
