add styles to component

--- a/wp-content/plugins/mytheme-blocks/src/blocks/secondblock/style.scss
+++ b/wp-content/plugins/mytheme-blocks/src/blocks/secondblock/style.scss
@@ -3,4 +3,11 @@
     color: white;
     border-radius: 5px;
     padding: 20px;
+    &.is-style-squared {
+        border-radius: 0;
+    }
+    &.is-style-outlined {
+        border-radius: 0;
+        border: 2px solid currentColor;
+    }
 }
