--- a/wp-content/plugins/mytheme-blocks/src/blocks/teammember/style.scss
+++ b/wp-content/plugins/mytheme-blocks/src/blocks/teammember/style.scss
@@ -1,13 +1,28 @@
-.wp-block-mytheme-blocks-teammember {
-    &__title {
-        color: #222;
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 0;
+.wp-block-mytheme-blocks-teammembers {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -10px;
+    margin-right: -10px;
+    @for $i from 1 through 6 {
+        &.has-#{$i}-columns {
+            .wp-block-mytheme-blocks-teammember {
+                width: calc(100%/#{$i} - 20px);
+            }
+        }
+    } 
+    .wp-block-mytheme-blocks-teammember {
+        margin: 10px;
+        &__title {
+            color: #222;
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 0;
+        }
+        &__info {
+            color: #565656;
+            font-weight: 300;
+            margin-bottom: 5px;
+        }
     }
-    &__info {
-        color: #565656;
-        font-weight: 300;
-        margin-bottom: 5px;
-    }
+
 }
