add sortable list to team member

--- a/wp-content/plugins/mytheme-blocks/src/blocks/teammember/style.scss
+++ b/wp-content/plugins/mytheme-blocks/src/blocks/teammember/style.scss
@@ -1,3 +1,6 @@
+.social_dragging {
+    list-style-type: none;
+}
 .wp-block-mytheme-blocks-teammembers {
     display: flex;
     flex-wrap: wrap;
@@ -22,6 +25,12 @@
             color: #565656;
             font-weight: 300;
             margin-bottom: 5px;
+        }
+        &__addIcon {
+            padding: 2px;
+            line-height: 1;
+            border: 1px dashed #8c969f;
+            cursor: pointer;
         }
         &__linkForm {
             border: 1px solid #eaeaea;
